# ClickHouse

dbms/src/Functions/: CMakeLists.txt  FunctionStartsEndsWith.h  endsWith.cpp  registerFunctionsString.cpp  startsWith.cpp
dbms/src/Functions/Vectorization/: Target.h
